--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     ],
     "require": {
         "composer/installers": "^1.9",
-        "drupal/core-composer-scaffold": "^9.3",
-        "drupal/core-project-message": "^9.3",
-        "drupal/core-recommended": "^9.3",
+        "drupal/core-composer-scaffold": "9",
+        "drupal/core-project-message": "9",
+        "drupal/core-recommended": "9",
         "drupal/core-vendor-hardening": "^9.3",
         "drupal/we_megamenu": "1.13",
         "drush/drush": "^11.0"
