--- a/themes/custom/entyviohcp/entyviohcp.libraries.yml
+++ b/themes/custom/entyviohcp/entyviohcp.libraries.yml
@@ -88,6 +88,9 @@ peer-perspectives-styling:
       css/all.css: {}
 request-an-representative-styling:
   version: 1.x
+  js:
+    includes/validation/validation.js: {}
+    js/form-request-rep.js: {}
   css:
     theme:
       css/all.css: {}
